# connect-4

./: .gitignore  CMakeLists.txt  README.md  main
code/include/: board.hpp  game.hpp  input.hpp  menu.hpp  message.hpp  play.hpp  player.hpp  position.hpp  style.hpp  utilities.hpp
code/src/: board.cpp  game.cpp  input.cpp  main.cpp  menu.cpp  message.cpp  player.cpp  style.cpp  utilities.cpp
